// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default values from mixins UU5.Forms.GroupMixin 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes docKit example UU5.Forms.Checkboxes should render as type 1 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="What kind of pets do you like?"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Checkbox
      className="uu5-forms-input-inner uu-forms-1yybi86"
      key="0"
      label="Dogs"
      labelPosition="right"
      name="dogs"
      onChange={[Function]}
      onIcon="mdi-check"
      size="s"
      value={true}
    />
    <Checkbox
      className="uu5-forms-input-inner uu-forms-1yybi86"
      key="1"
      label="Cats"
      labelPosition="right"
      name="cats"
      onChange={[Function]}
      onIcon="mdi-check"
      size="s"
    />
    <Checkbox
      className="uu5-forms-input-inner uu-forms-1yybi86"
      key="2"
      label="Yaks"
      labelPosition="right"
      name="yaks"
      onChange={[Function]}
      onIcon="mdi-check"
      size="s"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Checkboxes docKit example UU5.Forms.Checkboxes should render as type 2 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="What kind of pets do you like?"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Checkbox
      className="uu5-forms-input-inner uu-forms-1yybi86"
      key="0"
      label="Dogs"
      labelPosition="right"
      name="dogs"
      onChange={[Function]}
      onIcon="mdi-check"
      size="s"
      type={2}
      value={true}
    />
    <Checkbox
      className="uu5-forms-input-inner uu-forms-1yybi86"
      key="1"
      label="Cats"
      labelPosition="right"
      name="cats"
      onChange={[Function]}
      onIcon="mdi-check"
      size="s"
      type={2}
    />
    <Checkbox
      className="uu5-forms-input-inner uu-forms-1yybi86"
      key="2"
      label="Yaks"
      labelPosition="right"
      name="yaks"
      onChange={[Function]}
      onIcon="mdi-check"
      size="s"
      type={2}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Checkboxes props bgStyleChecked="filled" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-filled uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props bgStyleChecked="outline" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props className="my-classname" 1`] = `
<div
  className="uu5-forms-checkboxes my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props className="test-classname" 1`] = `
<div
  className="uu5-forms-checkboxes test-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props controlled=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props controlled=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props default props 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled=false 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled=true 3`] = `
<div
  className="uu5-forms-checkboxes uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback="error" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback="initial" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback="loading" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback="success" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback="warning" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-forms-checkboxes uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChange() 1`] = `
<Checkboxes
  colorSchema="default"
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChange() 2`] = `
<Checkboxes
  colorSchema="default"
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChangeFeedback() 1`] = `
<Checkboxes
  colorSchema="default"
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChangeFeedback() 2`] = `
<Checkboxes
  colorSchema="default"
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onValidate() 1`] = `
<Checkboxes
  colorSchema="default"
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props hidden=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props hidden=false 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props hidden=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props hidden=true 3`] = `
<div
  className="uu5-forms-checkboxes uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props icon="mdi-ok" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props id="myId" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props id="test-id" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="test-id"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inline=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inline=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-inputs-inline uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props label="Your personal email" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelPosition="left" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelPosition="right" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props name="myName" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props nestingLevel="box" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props nestingLevel="inline" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-inline uu5-forms-input-auto-width uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noIndex=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noIndex=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-noindex uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noPrint=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noPrint=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props offIcon="mdi-close" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props onIcon="" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props onIcon="mdi-paw" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props pureRender=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props pureRender=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props readOnly=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props readOnly=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props required=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props required=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    required={true}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props requiredMessage="Položka je povinná!" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selected=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selected=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBackground=false 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBackground=true 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBorderRadius="8px 16px" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBorderRadius=8 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size="l" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-l uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size="m" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size="s" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style={"margin":8} 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props type=1 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props type=2 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props value=undefined 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;
